<resources>
    <string name="app_name">Simulador Fuzzy</string>

    <!-- Strings used for fragments for navigation -->
    <string name="problemas_label">Problemas</string>
    <string name="problema_label">Problema</string>
    <string name="variaveis_label">Variáveis linguísticas</string>
    <string name="valores_label">Termos linguísticos</string>
    <string name="regras_label">Regras</string>
    <string name="simulador_label">Simulador</string>
    <string name="grafico_variavel_label">Gráfico</string>
    <string name="pertinencia">Pertinencia</string>

    <string name="problemas">Problemas</string>
    <string name="passos">Passos</string>
    <string name="problema">Problema: $problema</string>
    <string name="variavel">Variável: $variavel</string>
    <string name="variaveis">Variáveis linguísticas</string>
    <string name="regras">Regras</string>
    <string name="simulador">Simulador</string>
    <string name="valores">Termos linguísticos</string>
    <string name="grafico">Gráfico</string>
    <string name="simular">Simular</string>
    <string name="universo">Universo:</string>

    <string name="problema_nao_informado">Problema não informado</string>
    <string name="variavel_nao_informada">Variável não informada</string>
    <string name="termo_nao_informado">Termo não informado</string>

    <string name="excluir_problema">Excluir o problema?</string>
    <string name="excluir_variavel">Excluir a variável?</string>
    <string name="excluir_termo">Excluir o termo?</string>

    <string name="confirmacao">Confirmação</string>
    <string name="confirma">Confirma</string>
    <string name="cancela">Cancela</string>

    <string name="digite_problema">Entre com o nome do problema</string>
    <string name="digite_variavel">Entre com o nome da variável</string>
    <string name="digite_termo">Entre com o nome do termo</string>

    <string name="problema_adicionado">Problema adicionado com sucesso</string>
    <string name="variavel_adicionada">Variável adicionada com sucesso</string>
    <string name="termo_adicionado">Termo adicionado com sucesso</string>
    <string name="regra_adicionada">Regra adicionada com sucesso</string>

    <string name="problema_excluido">Problema excluido com sucesso</string>
    <string name="variavel_excluida">Variável excluida com sucesso</string>
    <string name="termo_excluido">Termo excluido com sucesso</string>
    <string name="regra_excluida">Regra excluida com sucesso</string>

    <string name="nenhuma_regra">Nenhuma regra definida</string>
    <string name="desculpe">Desculpe. Opção não implementada. Aguarde as próximas versões.</string>
    <string name="inicio">Universo: Início</string>
    <string name="fim">Universo: Fim</string>
    <string name="antecedente">Antecedente</string>
    <string name="consequente">Consequente</string>
    <string name="fim_maior_inicio">O valor final deve ser maior que o inicial</string>
    <string name="abc">Entre com A &lt;= B &lt;= C</string>


    <string name="servico">servico</string>
    <string name="ruim">ruim</string>
    <string name="aceitavel">aceitavel</string>
    <string name="excelente">excelente</string>

    <string name="comida">comida</string>
    <string name="pessima">pessima</string>
    <string name="comivel">comivel</string>
    <string name="deliciosa">deliciosa</string>

    <string name="gorjeta">gorjeta</string>
    <string name="baixa">baixa</string>
    <string name="media">media</string>
    <string name="alta">alta</string>

    <string name="defina">Defina pelo menos um antecedente e um consequente antes de definir regras</string>

    <string name="se">SE</string>
    <string name="eh">É</string>
    <string name="e">E</string>
    <string name="ou">OU</string>
    <string name="entao">ENTÃO</string>
    <string name="advariavel">Variável</string>
    <string name="adtermo">Termo</string>
    <string name="action_settings">Settings</string>
</resources>