<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context=".NovaVariavelActivity">

    <EditText
        android:id="@+id/edtVariavel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/digite_variavel"
        android:inputType="textPersonName" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/rbAntecedente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/antecedente" />

        <RadioButton
            android:id="@+id/rbConsequente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/consequente" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/inicio" />

    <EditText
        android:id="@+id/edtInicio"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="0"
        android:enabled="false"
        android:inputType="number" />

    <SeekBar
        android:id="@+id/sbInicio"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/fim" />

    <EditText
        android:id="@+id/edtFim"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="10"
        android:enabled="false"
        android:inputType="number" />

    <SeekBar
        android:id="@+id/sbFim"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="50"
        android:progress="10" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp">

        <Button
            android:id="@+id/btnCancela"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_weight="1"
            android:background="#F44336"
            android:onClick="cancela"
            android:text="@string/cancela"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnConfirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:onClick="confirma"
            android:text="@string/confirma"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>