<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ProblemaFragment">

    <TextView
        android:id="@+id/tvProblema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/problema" />

    <LinearLayout
        android:id="@+id/llEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"></LinearLayout>

    <Button
        android:id="@+id/btnSimular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simular" />

    <LinearLayout
        android:id="@+id/llSaida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPassos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passos" />

        <Button
            android:id="@+id/btnGrafico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grafico" />

    </LinearLayout>

</LinearLayout>